--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
