--- a/frontend/neighbour-link/package.json
+++ b/frontend/neighbour-link/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tamagui/core": "^1.136.6",
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "tamagui": "^1.136.6"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
