--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "validator": "^13.15.20"
   },
   "devDependencies": {
